{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 220,
  "lineage": "e896a2f5-e424-0f20-d89f-240cde723c51",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba9cfae65a212e98",
            "arn": "arn:aws:ec2:eu-west-1:922418836360:instance/i-0479c72bd7019c17f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0479c72bd7019c17f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "a130f833d63e27b0",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0584e42292f52dd57",
            "private_dns": "ip-10-10-3-167.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.167",
            "public_ip": "18.201.125.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:922418836360:key/d43cc9f7-363f-4d32-8172-4d4941e8db92",
                "throughput": 125,
                "volume_id": "vol-0d8c02e775f9e1b50",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e467fe8ae243044",
            "tags": {
              "Name": "public_terraform1"
            },
            "tags_all": {
              "Name": "public_terraform1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0976c33b23cfb493c"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.sgr_vpc",
            "aws_subnet.vpc_subnet",
            "aws_vpc.dev",
            "random_id.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba9cfae65a212e98",
            "arn": "arn:aws:ec2:eu-west-1:922418836360:instance/i-0dacf5c7728f7551e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dacf5c7728f7551e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "a130f833d63e27b0",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb68482dbb072f53",
            "private_dns": "ip-10-10-4-185.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.4.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:922418836360:key/d43cc9f7-363f-4d32-8172-4d4941e8db92",
                "throughput": 125,
                "volume_id": "vol-00f49650edf0fd021",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c23c45462d865427",
            "tags": {
              "Name": "private_terraform1"
            },
            "tags_all": {
              "Name": "private_terraform1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c60b81bd748a9a5"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev",
            "aws_security_group.sgr_vpc",
            "aws_security_group.sgr_vpc_private",
            "aws_subnet.vpc_subnet",
            "aws_vpc.dev",
            "random_id.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:internet-gateway/igw-07b6109e71464115f",
            "id": "igw-07b6109e71464115f",
            "owner_id": "922418836360",
            "tags": {
              "Name": "Internet gateway"
            },
            "tags_all": {
              "Name": "Internet gateway"
            },
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:network-acl/acl-0da6fa6655e0ada90",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.10.3.0/24",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 120,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.10.3.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.10.3.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 4,
                "to_port": 443
              }
            ],
            "id": "acl-0da6fa6655e0ada90",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.10.3.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 2,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.10.3.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 4,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.10.3.0/24",
                "from_port": 8,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 111,
                "to_port": 0
              }
            ],
            "owner_id": "922418836360",
            "subnet_ids": [],
            "tags": {
              "Name": "test-terrafrom"
            },
            "tags_all": {
              "Name": "test-terrafrom"
            },
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:network-acl/acl-059e0336e477050d9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 120,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 5,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 4,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 121,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.10.0.0/16",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 2,
                "to_port": 22
              }
            ],
            "id": "acl-059e0336e477050d9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 2,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 111,
                "to_port": 0
              }
            ],
            "owner_id": "922418836360",
            "subnet_ids": [],
            "tags": {
              "Name": "nacl_public_subnet"
            },
            "tags_all": {
              "Name": "nacl_public_subnet"
            },
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09e75701a9688a626",
            "network_acl_id": "acl-0da6fa6655e0ada90",
            "subnet_id": "subnet-0c23c45462d865427"
          },
          "dependencies": [
            "aws_network_acl.main",
            "aws_subnet.vpc_subnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-06b7e9d67eca27f2d",
            "network_acl_id": "acl-059e0336e477050d9",
            "subnet_id": "subnet-05e467fe8ae243044"
          },
          "dependencies": [
            "aws_network_acl.public_nacls",
            "aws_subnet.vpc_subnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:route-table/rtb-07467150310cfbacd",
            "id": "rtb-07467150310cfbacd",
            "owner_id": "922418836360",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private route"
            },
            "tags_all": {
              "Name": "Private route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:route-table/rtb-024ed719dcd63e93b",
            "id": "rtb-024ed719dcd63e93b",
            "owner_id": "922418836360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b6109e71464115f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route"
            },
            "tags_all": {
              "Name": "Public route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_connect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6d4073479465489",
            "route_table_id": "rtb-07467150310cfbacd",
            "subnet_id": "subnet-0c23c45462d865427"
          },
          "dependencies": [
            "aws_route_table.private_rtb",
            "aws_subnet.vpc_subnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07387af9585d1e0df",
            "route_table_id": "rtb-024ed719dcd63e93b",
            "subnet_id": "subnet-05e467fe8ae243044"
          },
          "dependencies": [
            "aws_internet_gateway.public_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.vpc_subnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:security-group/sg-0976c33b23cfb493c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0976c33b23cfb493c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250508143732946800000001",
            "name_prefix": "terraform-",
            "owner_id": "922418836360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public_sg"
            },
            "tags_all": {
              "Name": "Public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgr_vpc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:security-group/sg-01c60b81bd748a9a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0976c33b23cfb493c"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0976c33b23cfb493c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-01c60b81bd748a9a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0976c33b23cfb493c"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0976c33b23cfb493c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250508143735358200000003",
            "name_prefix": "terraform-",
            "owner_id": "922418836360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg"
            },
            "tags_all": {
              "Name": "private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sgr_vpc",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:subnet/subnet-05e467fe8ae243044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e467fe8ae243044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922418836360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:subnet/subnet-0c23c45462d865427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c23c45462d865427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "922418836360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:vpc/vpc-0a92f6d022965ab6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03fe44a5c43450dc2",
            "default_route_table_id": "rtb-09804a96400ea4700",
            "default_security_group_id": "sg-097e36d98c84ba1e8",
            "dhcp_options_id": "dopt-0a88b819e245e065c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a92f6d022965ab6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09804a96400ea4700",
            "owner_id": "922418836360",
            "tags": {
              "Name": "dev-vpc2"
            },
            "tags_all": {
              "Name": "dev-vpc2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:922418836360:vpc-endpoint/vpce-08a85811c1563a540",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-08a85811c1563a540",
            "owner_id": "922418836360",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-024ed719dcd63e93b"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "my-s3-endpoint"
            },
            "tags_all": {
              "Name": "my-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a92f6d022965ab6a"
          },
          "dependencies": [
            "aws_internet_gateway.public_igw",
            "aws_route_table.public_rtb",
            "aws_vpc.dev"
          ]
        }
      ]
    }
  ]
}